src/main/java/com/example/typist/model/errors/EntityNotFoundException.java
package com.example.typist.model.errors;

import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ResponseStatus;

@ResponseStatus(HttpStatus.NOT_FOUND)
public class EntityNotFoundException extends RuntimeException{
    public EntityNotFoundException(String message){
        super(message);
    }

    public EntityNotFoundException(String message, Exception cause){
        super(message, cause);
    }
}
